force-app/main/default/objects/Contact/fields/SSSU_Time_to_SQL__c.field-meta.xml
<CustomField>
    <fullName>SSSU_Time_to_SQL__c</fullName>
    <description>RO-1573, Calculates the time in minutes between HS workflow completed and recruiter created in the BE</description>
    <formula>IF(
   ISBLANK(Timestamp_Recruiter_Created__c) || ISBLANK(Timestamp_SSSU_HS_Workflow_completed__c),
   null,
   (Timestamp_Recruiter_Created__c - Timestamp_SSSU_HS_Workflow_completed__c) * 24 * 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the time in minutes between HS workflow completed and recruiter created in the BE</inlineHelpText>
    <label>SSSU Time to SQL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>