force-app/main/default/objects/Contact/fields/Sync_Test__c.field-meta.xml
<CustomField>
    <fullName>Sync_Test__c</fullName>
    <description>created to try and reproduce the issue observed during ZP on the agency field.</description>
    <label>Sync Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <isActive>false</isActive>
                <label>false</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
            <value>
                <fullName>true</fullName>
                <isActive>false</isActive>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>