force-app/main/default/objects/Contact/fields/TaskDrive_done__c.field-meta.xml
<CustomField>
    <fullName>TaskDrive_done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox temporarily for Taskdrive</description>
    <label>TaskDrive done</label>
    <type>Checkbox</type>
</CustomField>