force-app/main/default/objects/Contact/fields/Taskdrive_Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Taskdrive_Research_Date__c</fullName>
    <description>Date, when the contact information was last researched</description>
    <inlineHelpText>Date, when the contact information was last researched</inlineHelpText>
    <label>Timestamp Research Done (Contact)</label>
    <type>Date</type>
</CustomField>