force-app/main/default/objects/Contact/fields/temp_Phone_Numbers_Account__c.field-meta.xml
<CustomField>
    <fullName>temp_Phone_Numbers_Account__c</fullName>
    <description>Counts phone numbers on the account as of February 2026</description>
    <inlineHelpText>Counts phone numbers on the account as of February 2026</inlineHelpText>
    <label>_temp: Phone Numbers Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>