force-app/main/default/objects/Contact/fields/Timestamp_Became_a_Marketing_Qualified_L__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Became_a_Marketing_Qualified_L__c</fullName>
    <description>Conversion Information</description>
    <label>Timestamp Became a Marketing Qualified L</label>
    <type>Date</type>
</CustomField>