force-app/main/default/objects/Contact/fields/Timestamp_Became_a_MQL_Contact__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Became_a_MQL_Contact__c</fullName>
    <label>Timestamp Became a MQL (Contact)</label>
    <type>Date</type>
</CustomField>