force-app/main/default/objects/Contact/fields/Timestamp_Became_a_MQL_Contact_Latest__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Became_a_MQL_Contact_Latest__c</fullName>
    <description>RO - 2355</description>
    <label>Timestamp Became a MQL Contact</label>
    <type>DateTime</type>
</CustomField>