force-app/main/default/objects/Contact/fields/Timestamp_Direct_Mail_Audience_Verified__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Direct_Mail_Audience_Verified__c</fullName>
    <description>Used by Marketing to mark Contacts to add to direct mail campaign. Owner: Heydar. Dont build automations on top. Reevaluate field 12.2023</description>
    <inlineHelpText>Used by Marketing to mark Contacts to add to direct mail campaign.</inlineHelpText>
    <label>Timestamp Direct Mail Audience Verified</label>
    <type>Date</type>
</CustomField>