force-app/main/default/objects/Contact/fields/Timestamp_Direct_Mail_Contact__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Direct_Mail_Contact__c</fullName>
    <description>RO-1168</description>
    <label>Timestamp Direct Mail</label>
    <type>Date</type>
</CustomField>