force-app/main/default/objects/Contact/fields/Timestamp_Exclude_from_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Exclude_from_Outreach__c</fullName>
    <inlineHelpText>Zeigt an, wann dieser bestimmte Kontakt für den Ausschluss von Outreach-Kampagnen markiert wurde</inlineHelpText>
    <label>Timestamp Exclude from Outreach</label>
    <type>DateTime</type>
</CustomField>