force-app/main/default/objects/Contact/fields/Timestamp_Hubspot_merge_complete__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Hubspot_merge_complete__c</fullName>
    <label>Timestamp Hubspot merge complete</label>
    <type>DateTime</type>
</CustomField>