force-app/main/default/objects/Contact/fields/Timestamp_Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Last_Call__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:ActivityMetric.LastCallDateTime}</formula>
    <label>Timestamp Last Call</label>
    <type>DateTime</type>
</CustomField>