force-app/main/default/objects/Contact/fields/Timestamp_Last_Invoice_Information_PV__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Last_Invoice_Information_PV__c</fullName>
    <description>RO-1503</description>
    <inlineHelpText>Zeitpunkt des letzten […]  Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Last Invoice Information PV</label>
    <type>DateTime</type>
</CustomField>