force-app/main/default/objects/Contact/fields/Timestamp_Last_Job_Details_PV__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Last_Job_Details_PV__c</fullName>
    <description>RO-1503 , RO - 1731</description>
    <inlineHelpText>Zeitpunkt des letzten […]  Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Last Edit Job Page View</label>
    <type>DateTime</type>
</CustomField>