force-app/main/default/objects/Contact/fields/Timestamp_Last_Job_Details_PV_V2__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Last_Job_Details_PV_V2__c</fullName>
    <description>RO - 1731</description>
    <inlineHelpText>Zeitpunkt des letzten […]  Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Last Job Details PV V2</label>
    <type>DateTime</type>
</CustomField>