force-app/main/default/objects/Contact/fields/Timestamp_Last_Webinar_Invited__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Last_Webinar_Invited__c</fullName>
    <inlineHelpText>Zeitpunkt des letzten […]  Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Last Webinar Invited</label>
    <type>DateTime</type>
</CustomField>