force-app/main/default/objects/Contact/fields/Timestamp_Latest_MQL_conversion_c__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Latest_MQL_conversion_c__c</fullName>
    <description>RO-1700</description>
    <inlineHelpText>Zeigt das Datum, an dem der Kontakt die letzte MQL Conversion erreicht hat.</inlineHelpText>
    <label>Timestamp Latest MQL conversion</label>
    <type>DateTime</type>
</CustomField>