force-app/main/default/objects/Contact/fields/Timestamp_Latest_Opp_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Latest_Opp_Contact_Role__c</fullName>
    <description>RO-1821</description>
    <inlineHelpText>The latest created date of the Opportunity Contact role, whenever an Opportunity Contact role gets created (not edited) using this contact.</inlineHelpText>
    <label>Timestamp Latest Opp Contact Role</label>
    <type>DateTime</type>
</CustomField>