force-app/main/default/objects/Contact/fields/Timestamp_latest_opp_contact_role_Date__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_latest_opp_contact_role_Date__c</fullName>
    <description>Date field only for the purpose of syncing timestamp latest opp contact role to HS instead of the date/time field.</description>
    <formula>Timestamp_Latest_Opp_Contact_Role__c</formula>
    <label>Timestamp latest opp contact role (Date)</label>
    <type>Date</type>
</CustomField>