force-app/main/default/objects/Contact/fields/Timestamp_MST_Check__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_MST_Check__c</fullName>
    <description>RO - 2077</description>
    <label>Timestamp MST Check</label>
    <length>50</length>
    <type>Text</type>
</CustomField>