force-app/main/default/objects/Contact/fields/Timestamp_Opt_out_Cold_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Opt_out_Cold_Marketing_Email__c</fullName>
    <description>Updated when Opt out Cold Marketing Email is updated</description>
    <label>Timestamp Opt out Cold Marketing Email</label>
    <type>DateTime</type>
</CustomField>