force-app/main/default/objects/Contact/fields/Timestamp_Original_Job_Details_PV__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Original_Job_Details_PV__c</fullName>
    <description>RO-1503 , RO - 1731</description>
    <inlineHelpText>Zeitpunkt des ersten […] Page Views des Kontakts im RecruiterPortal.</inlineHelpText>
    <label>Timestamp Original Edit Job Page View</label>
    <type>DateTime</type>
</CustomField>