force-app/main/default/objects/Contact/fields/Timestamp_Original_Job_Details_PV_V2__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Original_Job_Details_PV_V2__c</fullName>
    <description>RO - 1731</description>
    <inlineHelpText>Zeitpunkt des ersten […] Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Original Job Details PV V2</label>
    <type>DateTime</type>
</CustomField>