force-app/main/default/objects/Contact/fields/Timestamp_Original_Job_Submitted_PV__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Original_Job_Submitted_PV__c</fullName>
    <description>RO-1503</description>
    <inlineHelpText>Zeitpunkt des ersten […] Page Views des Kontakts im RecruiterPortal.</inlineHelpText>
    <label>Timestamp Original Job Submitted PV</label>
    <type>DateTime</type>
</CustomField>