force-app/main/default/objects/Contact/fields/Timestamp_Original_Product_Selection_PV__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Original_Product_Selection_PV__c</fullName>
    <description>RO-1503</description>
    <inlineHelpText>Zeitpunkt des ersten […] Page Views des Kontakts im Recruiter Portal.</inlineHelpText>
    <label>Timestamp Original Product Selection PV</label>
    <type>DateTime</type>
</CustomField>