force-app/main/default/objects/Contact/fields/Timestamp_Qualification_Outcome_Updated__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Qualification_Outcome_Updated__c</fullName>
    <description>RO-2735</description>
    <label>Timestamp Qualification Outcome Updated</label>
    <type>DateTime</type>
</CustomField>