force-app/main/default/objects/Contact/fields/Timestamp_Recruiter_Created__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Recruiter_Created__c</fullName>
    <description>RO-1503</description>
    <inlineHelpText>Zeitpunkt an dem der Recruiter im Backend (RecruiterPortal) erstellt wurde.</inlineHelpText>
    <label>Timestamp Recruiter Created</label>
    <type>DateTime</type>
</CustomField>