force-app/main/default/objects/Contact/fields/Timestamp_SSSU__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU__c</fullName>
    <inlineHelpText>Zeigt, wann der Kontakt das erst mal das Self Service Sign Up Form auf unserer Webseite ausgefüllt hat.</inlineHelpText>
    <label>Timestamp SSSU</label>
    <type>Date</type>
</CustomField>