force-app/main/default/objects/Contact/fields/Timestamp_SSSU_FUP_Trigger_marker__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU_FUP_Trigger_marker__c</fullName>
    <description>RO - 1629</description>
    <label>Legacy Timestamp SSSU FUP Trigger marker</label>
    <type>DateTime</type>
</CustomField>