force-app/main/default/objects/Contact/fields/Timestamp_SSSU_HS_Workflow_completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU_HS_Workflow_completed__c</fullName>
    <description>RO-1559, Gets populated once a lead/contact has completed the HS workflow to filter out jobseekers.
It is the trigger for the custom lead conversion automation.</description>
    <label>Timestamp SSSU HS Workflow Completed</label>
    <type>DateTime</type>
</CustomField>