force-app/main/default/objects/Contact/fields/Timestamp_SuperRecruiter_Registration__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SuperRecruiter_Registration__c</fullName>
    <description>Timestemp when the contact registered for the SuperRecruiter program</description>
    <inlineHelpText>Timestemp when the contact registered for the SuperRecruiter program</inlineHelpText>
    <label>Timestamp SuperRecruiter Registration</label>
    <type>Date</type>
</CustomField>