force-app/main/default/objects/Contact/fields/Timestamps_Last_Recruiter_Action__c.field-meta.xml
<CustomField>
    <fullName>Timestamps_Last_Recruiter_Action__c</fullName>
    <description>RO-1503</description>
    <label>Legacy Timestamps Last Recruiter Action</label>
    <type>DateTime</type>
</CustomField>