force-app/main/default/objects/Contact/fields/Trigger_SSSU_opp_creation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_SSSU_opp_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO - 2077</description>
    <inlineHelpText>This checkbox is used for identification of contacts for which SSSU opps needs to be created</inlineHelpText>
    <label>Trigger SSSU opp creation</label>
    <type>Checkbox</type>
</CustomField>