force-app/main/default/objects/Contact/fields/Unsubscribed_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_From_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy - has been replaced by Email Opt Out	(HasOptedOutOfEmail)</description>
    <inlineHelpText>Legacy - has been replaced by Email Opt Out	(HasOptedOutOfEmail)</inlineHelpText>
    <label>Unsubscribed From Email</label>
    <type>Checkbox</type>
</CustomField>