force-app/main/default/objects/Contact/fields/urlXingProfile__c.field-meta.xml
<CustomField>
    <fullName>urlXingProfile__c</fullName>
    <label>Xing Profile</label>
    <type>Url</type>
</CustomField>