force-app/main/default/objects/Contact/fields/Wie_viele_Stellen_haben_sie_zu_besetzen__c.field-meta.xml
<CustomField>
    <fullName>Wie_viele_Stellen_haben_sie_zu_besetzen__c</fullName>
    <label>Wie viele Stellen haben sie zu besetzen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-10</fullName>
            </value>
            <value>
                <fullName>11-100</fullName>
            </value>
            <value>
                <fullName>&gt; 100</fullName>
            </value>
            <value>
                <fullName>2-30</fullName>
                <isActive>false</isActive>
                <label>2-30</label>
            </value>
            <value>
                <fullName>30-500</fullName>
                <isActive>false</isActive>
                <label>30-500</label>
            </value>
            <value>
                <fullName>&gt; 500</fullName>
                <isActive>false</isActive>
                <label>&gt; 500</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>