force-app/main/default/objects/Contact/fields/X2021_Event_Attended_Location__c.field-meta.xml
<CustomField>
    <fullName>X2021_Event_Attended_Location__c</fullName>
    <description>2021 non-remote event the contact attended.</description>
    <inlineHelpText>2021 non-remote event the contact attended.</inlineHelpText>
    <label>Legacy 2021 Event Attended Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Berlin 31.08</fullName>
            </value>
            <value>
                <fullName>Berlin 28.09</fullName>
            </value>
            <value>
                <fullName>Hamburg 02.09</fullName>
            </value>
            <value>
                <fullName>Leipzig 21.09</fullName>
            </value>
            <value>
                <fullName>Cologne 19.10</fullName>
            </value>
            <value>
                <fullName>Berlin 02.11</fullName>
            </value>
            <value>
                <fullName>Frankfurt 16.11</fullName>
            </value>
            <value>
                <fullName>Stuttgart 24.11</fullName>
            </value>
            <value>
                <fullName>München 25.11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>