force-app/main/default/objects/Contact/fields/ZP_2024_2nd_Level_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>ZP_2024_2nd_Level_SLA_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Temporarily used to track 2nd level SLAs for ZP 2024</inlineHelpText>
    <label>ZP 2024 2nd Level SLA Met</label>
    <type>Checkbox</type>
</CustomField>