force-app/main/default/objects/Contact/fields/ZP_2024_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>ZP_2024_SLA_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily used to track SLAs for ZP 2024. Field is populated via ZP 2024 flows.
RO-2216</description>
    <inlineHelpText>Temporarily used to track SLAs for ZP 2024</inlineHelpText>
    <label>ZP 2024 SLA Met</label>
    <type>Checkbox</type>
</CustomField>