force-app/main/default/objects/Contact/fields/ZPE_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>ZPE_SLA_Status__c</fullName>
    <label>ZPE SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>