force-app/main/default/objects/Contact/listViews/All_Contacts_TaskDrive.listView-meta.xml
<ListView>
    <fullName>All_Contacts_TaskDrive</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>fmlLetterSalutation__c</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email_verified__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Active__c</columns>
    <columns>TaskDrive_done__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>notContain</operation>
        <value>aircall</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Heyjobs,macedonia,flintstones</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Account_Owner__c</field>
        <operation>notContain</operation>
        <value>franca,martha,martin,kai,aishah,tanya,michele</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>TaskDrive_done__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>TaskDrive - All Contacts</label>
    <sharedTo>
        <role>Taskdrive</role>
    </sharedTo>
</ListView>