force-app/main/default/objects/Contact/listViews/Cadence_contacts.listView-meta.xml
<ListView>
    <fullName>Cadence_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lifecycle_Stage_Contact__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTION_CADENCE</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cadence contacts</label>
</ListView>