force-app/main/default/objects/Contact/listViews/Cleanup_Hubspot_created_contacts.listView-meta.xml
<ListView>
    <fullName>Cleanup_Hubspot_created_contacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>fmlLetterSalutation__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email_verified__c</columns>
    <columns>Title_Categories__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>notContain</operation>
        <value>aircall</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>contains</operation>
        <value>Mutterschutz,xx,Elternzeit,Unternehmen</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cleanup - not in company atm</label>
</ListView>