force-app/main/default/objects/Contact/listViews/Contacts_Cleanup_List.listView-meta.xml
<ListView>
    <fullName>Contacts_Cleanup_List</fullName>
    <booleanFilter>3 AND (1 OR 2) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Title_Categories__c</columns>
    <columns>CONTACT.SALUTATION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Title_Categories__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.SALUTATION</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>Aircall new contact</value>
    </filters>
    <label>Contacts Cleanup List _2020</label>
</ListView>