force-app/main/default/objects/Contact/listViews/Contacts_List_Masterclass.listView-meta.xml
<ListView>
    <fullName>Contacts_List_Masterclass</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Contacts List: Masterclass</label>
</ListView>