force-app/main/default/objects/Contact/listViews/Contacts_to_be_added_to_cadence.listView-meta.xml
<ListView>
    <fullName>Contacts_to_be_added_to_cadence</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY,LAST_N_DAYS:10</value>
    </filters>
    <label>Contacts to be added to cadence</label>
</ListView>