force-app/main/default/objects/Contact/listViews/Contacts_Tresor_ZP2023.listView-meta.xml
<ListView>
    <fullName>Contacts_Tresor_ZP2023</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account.Last_created_Opportunity_ID__c</columns>
    <columns>Account.Last_Open_Opportunity_Date__c</columns>
    <columns>Account.Open_Opportunity_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Contacts_Tresor_ZP2023</label>
</ListView>