force-app/main/default/objects/Contact/listViews/Copy_of_LeadGen_ZP_Outreach_ACM_LG.listView-meta.xml
<ListView>
    <fullName>Copy_of_LeadGen_ZP_Outreach_ACM_LG</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Title_Categories__c</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>fmlLetterSalutation__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email_verified__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>notContain</operation>
        <value>aircall</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Email_verified__c</field>
        <operation>equals</operation>
        <value>OK,Risky</value>
    </filters>
    <filters>
        <field>Blacklist__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account_Owner__c</field>
        <operation>contains</operation>
        <value>lukasz</value>
    </filters>
    <label>Copy of LeadGen - ZP Outreach ACM - LG</label>
    <sharedTo></sharedTo>
</ListView>