force-app/main/default/objects/Contact/listViews/Customer_Success_contacts.listView-meta.xml
<ListView>
    <fullName>Customer_Success_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Success contacts</label>
</ListView>